[gd_scene load_steps=6 format=2]

[ext_resource path="res://gui/themes/kenneyUI.tres" type="Theme" id=1]
[ext_resource path="res://gui/option_menu/OptionMenu.gd" type="Script" id=2]
[ext_resource path="res://trees/fog.tres" type="Shader" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 3 )
shader_param/color = Vector3( 0.35, 0.48, 0.95 )
shader_param/OCTAVES = 4

[node name="Control" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -145.0
margin_top = -101.0
margin_right = 145.0
margin_bottom = 101.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lighting" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 290.0
margin_bottom = 36.0

[node name="Label" type="Label" parent="VBoxContainer/Lighting"]
margin_top = 9.0
margin_right = 250.0
margin_bottom = 27.0
size_flags_horizontal = 3
text = "enable lighting"

[node name="Lighting" type="CheckBox" parent="VBoxContainer/Lighting"]
margin_left = 254.0
margin_right = 290.0
margin_bottom = 36.0
pressed = true

[node name="Vsync" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 40.0
margin_right = 290.0
margin_bottom = 76.0

[node name="Label" type="Label" parent="VBoxContainer/Vsync"]
margin_top = 9.0
margin_right = 250.0
margin_bottom = 27.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "enable vsync"

[node name="Vsync" type="CheckBox" parent="VBoxContainer/Vsync"]
margin_left = 254.0
margin_right = 290.0
margin_bottom = 36.0
pressed = true

[node name="Smooth" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 80.0
margin_right = 290.0
margin_bottom = 116.0

[node name="Label" type="Label" parent="VBoxContainer/Smooth"]
margin_top = 9.0
margin_right = 250.0
margin_bottom = 27.0
size_flags_horizontal = 3
text = "enable smooth camera"

[node name="Smooth" type="CheckBox" parent="VBoxContainer/Smooth"]
margin_left = 254.0
margin_right = 290.0
margin_bottom = 36.0
pressed = true

[node name="Window" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 120.0
margin_right = 290.0
margin_bottom = 156.0

[node name="Label" type="Label" parent="VBoxContainer/Window"]
margin_top = 9.0
margin_right = 250.0
margin_bottom = 27.0
size_flags_horizontal = 3
text = "Fullscreen"

[node name="Window" type="CheckBox" parent="VBoxContainer/Window"]
margin_left = 254.0
margin_right = 290.0
margin_bottom = 36.0
pressed = true

[node name="Back" type="Button" parent="VBoxContainer"]
margin_top = 160.0
margin_right = 290.0
margin_bottom = 202.251
text = "Back"

[node name="FogBackground" type="Sprite" parent="."]
material = SubResource( 1 )
position = Vector2( 441, 270.5 )
scale = Vector2( 46.1563, 29.0156 )
texture = ExtResource( 4 )

[connection signal="pressed" from="VBoxContainer/Lighting/Lighting" to="." method="_on_Lighting_pressed"]
[connection signal="pressed" from="VBoxContainer/Vsync/Vsync" to="." method="_on_Vsync_pressed"]
[connection signal="pressed" from="VBoxContainer/Smooth/Smooth" to="." method="_on_Smooth_pressed"]
[connection signal="pressed" from="VBoxContainer/Window/Window" to="." method="_on_Window_pressed"]
[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_Back_pressed"]
